@@ -23,5 +23,10 @@ class TestGroup(unittest.TestCase):
             list(group) == list(group)
 
 
+    def test_cache_groups(self):
+        """group: Iterate over all groups"""
+        assert len(list(self.cache.groups)) == self.cache.group_count
+
+
 if __name__ == "__main__":
     unittest.main()
