@@ -7,6 +7,7 @@ python-apt (0.8.0~exp1) UNRELEASED; urgency=low
     no progress output
   * Support (name, arch) tuples in apt_pkg.Cache mappings, wrapping
     FindPkg() with two string parameters.
+  * Introduce apt_pkg.Cache.groups and apt_pkg.Cache.group_count
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 05 Apr 2011 10:33:54 +0200
 
